hphp/test/quick/typechecks-dv.php.expectf

Notice: Use of undefined constant D00Dz - assumed 'D00Dz' in %s on line 3
D00Dzw00t
Fatal error: Argument 1 passed to woot() must be an instance of string, int given in %s on line 5
